@@ -47,7 +47,7 @@ def usage(rc = 1):
     print "       conary localcommit  <changeset>"
     print "       conary pin          <pkgname>[=<version>][[flavor]]*"
     print "       conary query        <pkgname>[=<version>][[flavor]]*"
-    print "       conary remove       <path>"
+    print "       conary remove       <path>+"
     print "       conary repquery     <pkgname>[=<version>][[flavor]]*"
     print "       conary rblist"
     print "       conary rollback     <rollback>"
@@ -392,7 +392,14 @@ def realMain(cfg, argv=sys.argv):
 	    os.unlink(fullPath)
 	else:
 	    log.warning("%s has already been removed", fullPath)
-	db.removeFile(otherArgs[2])
+        # this call should move into conaryclient; for now we need
+        # this to instantiate the log
+        from conary import conaryclient
+        client = conaryclient.ConaryClient(cfg)
+        log.syslog.command()
+        for path in otherArgs[2:]:
+            db.removeFile(otherArgs[2])
+        log.syslog.commandComplete()
     elif (otherArgs[1] == "rollback"):
         kwargs = {}
 	if argSet.has_key('replace-files'):
